examples/test/testpolicy3388.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3388
  namespace: namespace147
spec:
  podSelector:
    matchLabels:
      key25: value22
      key36: value43
      key15: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value1
          key10: value33
          key45: value46
      podSelector:
        matchLabels:
          key3: value22
          key40: value5
          key22: value12
